--- a/src/app/indian/items/items.component.html
+++ b/src/app/indian/items/items.component.html
@@ -15,79 +15,79 @@
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/chana">
         <img src="../../../assets/image/chana palak.jpg" alt="Chana Palak">
         <div class="image-caption">Chana Palak</div>
         </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/galauti">
         <img src="../../../assets/image/galauti kebab.jpg" alt="Galauti Kebab">
         <div class="image-caption">Galauti Kebab</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/hyderabad">
         <img src="../../../assets/image/hydrabad briyani.jpg" alt="Hyderabadi Biryani">
         <div class="image-caption">Hyderabadi Biryani</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/jack">
         <img src="../../../assets/image/jackfruit briyani.jpg" alt="Jackfruit Biryani">
         <div class="image-caption">Jackfruit Biryani</div>
         </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/kolhapuri">
         <img src="../../../assets/image/kolapuri chicken.jpg" alt="Kolhapuri Chicken">
-        <div class="image-caption">Kolhapuri Chicken</div>
+        <div class="image-caption"> Chicken Kolhapuri</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/koliwada">
         <img src="../../../assets/image/koliwada prawns.jpg" alt="Koliwada Prawns">
         <div class="image-caption">Koliwada Prawns</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/malai">
         <img src="../../../assets/image/malai ghevar.jpg" alt="Malai Ghevar">
         <div class="image-caption">Malai Ghevar</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/modak">
         <img src="../../../assets/image/modak.jpg" alt="Modak">
         <div class="image-caption">Modak</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/rajasthan">
         <img src="../../../assets/image/rajasthani laal mass.jpg" alt="Rajasthani Laal Maas">
         <div class="image-caption">Rajasthani Laal Maas</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/seviyan">
         <img src="../../../assets/image/seviyan kheer.jpg" alt="Seviyan Kheer">
         <div class="image-caption">Seviyan Kheer</div>
         </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/shahi">
         <img src="../../../assets/image/shahi tukda.jpg" alt="Shahi Tukda">
         <div class="image-caption">Shahi Tukda</div>
     </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/surmai">
         <img src="../../../assets/image/surmai fish briyani.jpg" alt="Surmai Fish Biryani">
         <div class="image-caption">Surmai Fish Biryani</div>
         </a>
     </div>
     <div class="image-frame">
-        <a href="">
+        <a href="/indian/mutton">
         <img src="../../../assets/image/mutton kofta.jpg" alt="Mutton Kofta">
         <div class="image-caption">Mutton Kofta</div>
     </a>
