--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -11,6 +11,8 @@
                     <li><a href ="/about/profile"> ABOUT </a></li>
                     <li><a href ="/auth/recipe"> 5 MIN RECIPE </a></li>
                     <li><a href ="#"> CONTACT </a></li>
+                    <li><a href ="/auth/sigup"> SIGNUP </a></li>
+                    <li><a href ="/auth/signin"> SIGNIN </a></li>
                 </ul>
 
                 <div class="menu-toggle" id="menu-toggle">
