--- a/src/app/landingpage/landingpage.component.css
+++ b/src/app/landingpage/landingpage.component.css
@@ -88,7 +88,7 @@ nav {
 
 .hero-content {
     max-width: 50%;
-    border-left: 2px solid white;
+    /* border-left: 2px solid white; */
 }
 
 .hero-content h1 {
